@@ -402,6 +402,33 @@ Package=<4>
 
 ###############################################################################
 
+Project: "Demo osgvertexprogram"=.\Demos\osgvertexprogram\osgvertexprogram.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+    Begin Project Dependency
+    Project_Dep_Name Core osg
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name Core osgDB
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name Core osgGA
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name Core osgGLUT
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name Core osgUtil
+    End Project Dependency
+}}}
+
+###############################################################################
+
 Project: "Demo osgshape"=.\Demos\osgshape\osgshape.dsp - Package Owner=<4>
 
 Package=<5>
