@@ -18,9 +18,16 @@ OSG News (most significant items from ChangeLog)
     Addition osgSim which is NodeKit designed for visual simulation
     market, currently features high fidelity light points support.
 
-    From Brede Johansen, new osgpbuffer demo for Win32.
+    From Brede Johansen, new ARB VertexProgram StateAttribute class and
+    osgpbuffer demo for Win32.
     
     New osglogo demo.
+    
+    Removed the osg/ManagerManger and associated #define osgNew's, this has
+    been done to simplify users code and to solve the lack of thread safety 
+    that was causing problems with the MemoryManager.
+    
+    Support for reading and writing of callbacks in the .osg format.
 
 
 13th November 2002 - OpenSceneGraph-0.9.2.tar.gz
